src/assets/styles/global-styles.css
body {
    font-family: 'Poppins';
    --color-lightGrey: #323232;
    --color-parrot: #78cc6d;
    --color-white: #ffffff;
    --color-blue: #004e7a;
    /*#1f5ebb;*/
}

@font-face {
    font-family: 'Poppins';
    src: url(../fonts/Poppins/Poppins-Regular.ttf);
}

@font-face {
    font-family: 'Poppins-Italic';
    src: url(../fonts/Poppins/Poppins-Italic.ttf);
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    box-shadow: inset 0 0 2px rgba(255, 255, 255, 1);
    -webkit-box-shadow: inset 0 0 10px rgba(255, 255, 255, 1);
    border-radius: 4px;
}

::-webkit-scrollbar-thumb {
    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
    -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
    border-radius: 4px;
}

a, a:hover, a:focus, a:active {
    color: inherit;
    text-decoration: none;
}

.side-menu>a.active {
    color: var(--color-parrot);
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

.head2 {
    font-size: 18px;
    font-weight: 100;
    color: var(--color-parrot);
    position: relative;
    margin-left: 15px;
}

.head2:after {
    content: '';
    height: 100%;
    width: 2px;
    position: absolute;
    left: -15px;
    border: 2px solid;
    top: -3px;
    background: var(--color-parrot);
}

.page_wrap {
    width: 100%;
    height: 100vh;
    display: flex;
}

.wrapper {
    width: 80%;
    margin: 0 auto;
    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: 100px 4fr 8fr;
    align-items: center;
    justify-content: center;
}

.details {
    padding: 10px 20px;
    height: 73%;
    background-color: var(--color-white);
    overflow-y: scroll;
    border-radius: 0 5px 5px 0;
}

.section-details {
    padding: 0 20px;
}

.section-details p.section__para {
    color: var(--color-blue);
    font-weight: 600;
    letter-spacing: 0.5px;
}

.section-heading {
    color: var(--color-blue);
    font-weight: bold;
    text-align: center;
    letter-spacing: 0.5px;
}

.section-heading>span {
    position: relative;
}

.section-heading>span:after {
    content: "";
    position: absolute;
    bottom: -10px;
    left: 0%;
    background: url('../images/line.svg') no-repeat;
    height: 10px;
    width: 100px;
}

/* card styling */

.user-card {
    background: #fafafa;
    border-radius: 5px;
    /* box-shadow: -8px -10px 4px #73a06d; */
}

/* menu styling */

#sidebar {
    background: white;
    border-radius: 5px;
    margin: 0 10px 0 0;
}

#sidebar>ul {}

li.side-menu {
    padding: 24px 10px;
    color: var(--color-blue);
    text-align: center;
    position: relative;
}

#sidebar>ul li.side-menu:not(:first-child):before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    bottom: auto;
    width: 100%;
    height: 1px;
    background: -moz-radial-gradient( right, ellipse cover, #ddd 0%, rgba(255, 255, 255, 0) 70%);
    background: -webkit-radial-gradient( right, ellipse cover, #ddd 0%, rgba(255, 255, 255, 0) 70%);
    background: radial-gradient( ellipse at right, #ddd 0%, rgba(255, 255, 255, 0) 70%);
}

.side-menu .menu-icon:hover {
    color: var(--color-parrot);
}

.menu-text {
    padding-bottom: 0;
    margin-bottom: 0;
}

.project {
    box-shadow: 0 0 10px #ccc;
    padding: 10px 20px;
    text-align: center;
    border-radius: 5px;
    margin-bottom: 15px;
}

.project__name {
    color: var(--color-parrot);
    text-align: left;
    margin: 8px 0px;
}

p.project__domain, p.project__tech, .project__desc>p {
    text-align: justify;
    margin: 10px 0;
}

/* card styling */

.user-img {
    border-radius: 5px 5px 0 0;
    position: relative;
    overflow: hidden;
    /* background: #c5cae9 url(../images/pic.png) no-repeat center 0; */
    background: #c5cae9;
    width: 100%;
    height: 480px !important;
    min-height: 480px;
}

.progressive-background-image, .progressive-background-placeholder {
    height: 116% !important;
    background-size: contain !important;
    z-index: 0 !important;
}

.title p {
    text-align: center;
    font-weight: 400;
    font-size: 26px;
    color: var(--color-lightGrey);
}

.contact-view-wrapper {
    display: grid;
    grid-template-columns: 6fr 6fr;
    grid-template-rows: 12fr;
    margin-bottom: 70px;
}

/* skill set styling */

.skillset {
    display: grid;
    grid-template-columns: repeat(4, 3fr);
    grid-template-rows: repeat(3, 1fr);
    align-items: center;
    justify-content: center;
    text-align: center;
    gap: 10px;
}

.skill-icon {
    height: 50px !important;
    width: 50px !important;
}

.skill {
    transition: .3s ease-out;
    opacity: 1;
}

.skill:hover>.skill-text {
    opacity: 1;
    -webkit-transition: .3s ease-in;
    transition: .3s ease-in;
}

.skill:hover {
    opacity: 0.8;
}

.skill-text {
    opacity: 0;
    -webkit-transition: .3s ease-out;
    transition: 0.3s ease-out;
}

/* profile page */

.timeline__wrapper {
    border-left: 2px solid var(--color-blue);
    margin-left: 140px;
    padding: 0 30px;
}

.timeline-icon {
    color: var(--color-blue);
    padding-left: 8px;
}

.education, .experience {
    margin-bottom: 40px;
}

/* media query */

/* mobile styling */

@media screen and (min-width: 300px) and (max-width: 640px) {
    .page_wrap {
        height: 100%;
        display: block;
    }
    .wrapper {
        width: 95%;
        grid-template-columns: 12fr;
    }
    .menu {
        margin-bottom: 10px;
        /* position: fixed; */
        z-index: 5;
        height: 80px;
    }
    .card {
        width: 100%;
        height: 100%;
        margin: 0 auto;
        position: relative;
    }
    #sidebar {
        margin: 0;
        margin-bottom: 80px;
        border-radius: 0;
    }
    #sidebar>ul {
        display: grid;
        grid-template-columns: repeat(4, 3fr);
        position: fixed;
        top: 0;
        width: 100%;
        left: 0;
        z-index: 11;
        background: white;
    }
    .menu-text {
        padding-bottom: 0;
        margin-bottom: 0;
        margin-top: 10px;
    }
    li.side-menu {
        padding: 10px;
    }
    #sidebar>ul li.side-menu:not(:first-child):before {
        width: 1px;
        height: 100%;
        background: radial-gradient( ellipse at right, #ddd 0%, rgba(255, 255, 255, 0) 70%);
    }
    .user-card {
        margin-bottom: 10px;
        border-radius: 0;
    }
    .user-img {
        border-radius: 0;
    }
    .section-details {
        padding: 0px;
    }
    .details {
        border-radius: 0;
        height: auto;
        overflow-y: auto;
        margin-bottom: 10px;
    }
    .timeline__wrapper {
        margin-left: 14px;
    }
    .job-info {
        position: static;
    }
    .skillset {
        display: grid;
        grid-template-columns: repeat(2, 6fr);
        grid-template-rows: repeat(3, 1fr);
        align-items: center;
        justify-content: center;
        text-align: center;
        grid-row-gap: 25px;
    }
    .user-card {
        box-shadow: none;
    }
    .skill-text {
        opacity: 1;
    }
}

@media screen and (min-width: 640px) and (max-width: 992px) {
    /* 640 - 767  */
    .page_wrap {
        height: 100%;
        display: block;
    }
    .wrapper {
        width: 80%;
        grid-template-columns: 1fr;
    }
    .menu {
        margin-bottom: 10px;
        /* position: fixed; */
        z-index: 5;
        height: 80px;
    }
    .card {
        width: 100%;
        height: 100%;
        margin: 0 auto;
        position: relative;
    }
    #sidebar {
        margin: 0;
        /* margin-bottom: 80px; */
        border-radius: 0;
    }
    #sidebar>ul {
        display: grid;
        grid-template-columns: repeat(4, 3fr);
        position: fixed;
        top: 0;
        width: 100%;
        left: 0;
        z-index: 11;
        background: white;
    }
    .menu-text {
        padding-bottom: 0;
        margin-bottom: 0;
        margin-top: 10px;
    }
    li.side-menu {
        padding: 10px;
    }
    #sidebar>ul li.side-menu:not(:first-child):before {
        width: 1px;
        height: 100%;
        background: radial-gradient( ellipse at right, #ddd 0%, rgba(255, 255, 255, 0) 70%);
    }
    .user-card {
        box-shadow: none;
        margin-bottom: 10px;
        border-radius: 0;
    }
    .user-img {
        border-radius: 0;
    }
    .skillset {
        grid-template-columns: repeat(3, 4fr);
    }
    .details {
        border-radius: 0;
        height: auto;
        overflow-y: auto;
        margin-bottom: 10px;
    }
    .skill-text {
        opacity: 1;
    }
}

/* tab styling */

@media screen and (min-width: 993px) and (max-width: 1380px) {
    /* 1200 - 1380 */
    .wrapper {
        width: 80%;
        grid-template-columns: 90px 5fr 7fr;
    }
}

